--- a/index.css
+++ b/index.css
@@ -2,4 +2,82 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: "Rubik", sans-serif;
+  background-color: #eef0f4;
+}
+.container {
+  display: flex;
+  margin: 30px 0;
+  flex-direction: column;
+  max-width: 320px;
+  padding-top: 75px;
+  padding-bottom: 50px;
+  border-radius: 25px;
+}
+img {
+  padding-bottom: 25px;
+}
+input {
+  color: #432000;
+  background-color: #dce1eb;
+  width: 250px;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+button {
+  color: #fdfdfd;
+  background-color: #ac485a;
+  width: 250px;
+  border: none;
+  margin-top: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-radius: 10px;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Rubik", sans-serif;
+  background-color: #eef0f4;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 320px;
+  margin: 30px auto;
+  border: black 5px solid;
+}
+
+img {
+  width: 150px;
+  margin: 0 auto;
+}
+
+input {
+  color: #432000;
+  background-color: #dce1eb;
+  border: 0;
+  padding: 15px;
+  border-radius: 8px;
+  font-size: 20px;
+  text-align: center;
+  font-family: "Rubik", sans-serif;
+  margin: 10px 0;
+}
+
+button {
+  color: #fdfdfd;
+  background-color: #ac485a;
+  border: 0;
+  padding: 15px;
+  border-radius: 8px;
+  font-size: 20px;
+  text-align: center;
+  font-family: "Rubik", sans-serif;
 }
