--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ body {
   padding: 0;
   font-family: "Rubik", sans-serif;
   background-color: #eef0f4;
+  color: #432000;
+  user-select: none;
 }
 
 .container {
@@ -11,7 +13,10 @@ body {
   flex-direction: column;
   max-width: 320px;
   margin: 30px auto;
-  /* border: black 5px solid; */
+  width: auto;
+  border: black 5px solid;
+  border-radius: 15px;
+  padding: 25px;
 }
 
 img {
@@ -40,4 +45,32 @@ button {
   font-size: 20px;
   text-align: center;
   font-family: "Rubik", sans-serif;
+}
+button:hover {
+  background-color: #432000;
+  cursor: pointer;
+}
+ul,
+#shoppinglist {
+  flex-wrap: wrap;
+  display: flex;
+  gap: 5px;
+  padding-inline-start: 0px;
+}
+
+ul li {
+  background-color: #fffdf8;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 8px;
+  padding: 15px;
+  list-style-type: none;
+  padding-inline-start: none;
+  width: auto;
+  flex-grow: 1;
+  text-align: center;
+  font-size: 20px;
+}
+ul li:hover {
+  background-color: #ffecc7;
 }
